Fix visible side nav collapse on screen resize

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -161,10 +161,13 @@ a:hover {
     height: 100%;
     position: fixed;
     left: -90vw;
-    transition: left 0.6s ease-in-out;
     background-color: #FFEFD4;
     padding-left: 15px;
     padding-right: 15px;
+}
+
+#side-nav-collapse.expanding {
+    transition: left 0.5s ease-in-out;
 }
 
 #side-nav-collapse.expanded {
